vlib/v/parser/tests/invalid_using_volatile.vv
fn main() {
	if volatile true {
		println(true)
	}
}
